--- a/src/BD/AlquilerInterfaz/V_AgenteInmobiliario.form
+++ b/src/BD/AlquilerInterfaz/V_AgenteInmobiliario.form
@@ -112,7 +112,11 @@
                                           <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
                                           <Component id="btnBuscarFiltro" min="-2" pref="113" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="cbxCasa" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Component id="cbxCasa" min="-2" pref="150" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="btnVerCasa" min="-2" max="-2" attributes="0"/>
+                                      </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" attributes="0">
@@ -212,10 +216,11 @@
                                   <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
+                          <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="cbxCasa" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnVerCasa" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -226,7 +231,7 @@
                           <Component id="btnBuscarFiltro" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnCrear" min="-2" max="-2" attributes="0"/>
                       <Component id="btnModificar" min="-2" pref="40" max="-2" attributes="0"/>
@@ -565,6 +570,14 @@
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnVerCasa">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="VER"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVerCasaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
