--- a/src/Reporte/sistema.jrxml
+++ b/src/Reporte/sistema.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e9ba7caa-86f7-406e-873b-0e05ebf188e3">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sistema" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e9ba7caa-86f7-406e-873b-0e05ebf188e3">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -22,6 +22,21 @@
 	<variable name="id_reservacion_1" class="java.lang.Integer" resetType="Column" calculation="Count">
 		<variableExpression><![CDATA[$F{id_reservacion}]]></variableExpression>
 	</variable>
+	<variable name="id_reservacion_2" class="java.lang.Integer" resetType="Column" calculation="DistinctCount">
+		<variableExpression><![CDATA[$F{id_reservacion}]]></variableExpression>
+	</variable>
+	<variable name="id_casa_1" class="java.lang.Integer" resetType="Column" calculation="DistinctCount">
+		<variableExpression><![CDATA[$F{id_casa}]]></variableExpression>
+	</variable>
+	<variable name="IDCliente_1" class="java.lang.Integer" resetType="Column" calculation="DistinctCount">
+		<variableExpression><![CDATA[$F{IDCliente}]]></variableExpression>
+	</variable>
+	<variable name="fecha_inicio_1" class="java.lang.Integer" resetType="Column" calculation="DistinctCount">
+		<variableExpression><![CDATA[$F{fecha_inicio}]]></variableExpression>
+	</variable>
+	<variable name="fecha_fin_1" class="java.lang.Integer" resetType="Column" calculation="DistinctCount">
+		<variableExpression><![CDATA[$F{fecha_fin}]]></variableExpression>
+	</variable>
 	<background>
 		<band height="555" splitType="Stretch"/>
 	</background>
@@ -32,7 +47,7 @@
 				<textElement textAlignment="Right">
 					<font size="22" isBold="false"/>
 				</textElement>
-				<text><![CDATA[AN]]></text>
+				<text><![CDATA[Reporte de reservaciones]]></text>
 			</staticText>
 			<frame>
 				<reportElement mode="Opaque" x="-20" y="0" width="822" height="65" forecolor="#006699" backcolor="#006699" uuid="f13b477c-660e-4424-8c43-015db57d4174"/>
@@ -41,7 +56,7 @@
 					<textElement textAlignment="Right">
 						<font size="54" isBold="false"/>
 					</textElement>
-					<text><![CDATA[M2B HOUSE]]></text>
+					<text><![CDATA[M2B KAME HOUSE]]></text>
 				</staticText>
 			</frame>
 		</band>
@@ -50,7 +65,7 @@
 		<band splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="75" splitType="Stretch">
+		<band height="36" splitType="Stretch">
 			<frame>
 				<reportElement x="0" y="0" width="802" height="36" uuid="b94d0131-58cc-46e0-961f-fa9535119924"/>
 				<staticText>
@@ -59,17 +74,17 @@
 					<text><![CDATA[ID RESERVACION]]></text>
 				</staticText>
 				<staticText>
-					<reportElement style="Column header" x="127" y="0" width="138" height="36" uuid="0b71ea14-1e0c-49bc-a26f-4fc8582c7f09"/>
+					<reportElement style="Column header" x="127" y="0" width="168" height="36" uuid="0b71ea14-1e0c-49bc-a26f-4fc8582c7f09"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[ID CASA]]></text>
+					<text><![CDATA[ID CASA VACACIONAL]]></text>
 				</staticText>
 				<staticText>
-					<reportElement style="Column header" x="265" y="0" width="187" height="34" uuid="4c296b49-e4c9-4bfe-af20-3e137bf12332"/>
+					<reportElement style="Column header" x="295" y="0" width="189" height="36" uuid="4c296b49-e4c9-4bfe-af20-3e137bf12332"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[CEDULA CLIENTE]]></text>
 				</staticText>
 				<staticText>
-					<reportElement style="Column header" x="452" y="0" width="199" height="36" uuid="7b629539-d656-4212-ada7-feb35a671117"/>
+					<reportElement style="Column header" x="484" y="0" width="167" height="36" uuid="7b629539-d656-4212-ada7-feb35a671117"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[FECHA INICIO]]></text>
 				</staticText>
@@ -79,33 +94,42 @@
 					<text><![CDATA[FECHA FIN]]></text>
 				</staticText>
 			</frame>
-			<textField>
-				<reportElement x="265" y="34" width="187" height="41" uuid="d76ef574-56c9-43ad-8ee1-ba2f62ad5287"/>
-				<textFieldExpression><![CDATA[$F{IDCliente}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="452" y="36" width="199" height="39" uuid="84ba2334-59cc-4946-bcfd-eda3303a5bc6"/>
-				<textFieldExpression><![CDATA[$F{fecha_inicio}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="651" y="36" width="151" height="39" uuid="cff4e4a7-5bab-48e6-881c-f0efa2f01b69"/>
-				<textFieldExpression><![CDATA[$F{fecha_fin}]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Column">
-				<reportElement x="0" y="36" width="127" height="39" uuid="9fce54cc-381b-41fb-a314-3a21f961eab7"/>
-				<textFieldExpression><![CDATA[$V{id_reservacion_1}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="127" y="36" width="138" height="39" uuid="450e7f5f-99f5-409c-b906-ecd7894427e7"/>
-				<textFieldExpression><![CDATA[$F{id_casa}]]></textFieldExpression>
-			</textField>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="39" splitType="Stretch"/>
+		<band height="76" splitType="Stretch">
+			<frame>
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="802" height="40" uuid="da1f6fc3-f11b-483c-bcd3-4c7f0bb9aa0f"/>
+				<textField>
+					<reportElement x="0" y="0" width="127" height="40" uuid="8b133b50-7494-4094-a821-2449f38f4905"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{id_reservacion}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="127" y="0" width="168" height="40" uuid="983bc889-b37f-4d07-b52d-cb6192b99b23"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{id_casa}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="295" y="0" width="189" height="40" uuid="0f11d224-f48a-4a84-a6c5-acb0aa9f346a"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{IDCliente}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="484" y="0" width="167" height="40" uuid="29564332-c760-4f51-87dc-944b1449d40b"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{fecha_inicio}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="651" y="0" width="151" height="40" uuid="8d9954cc-d2a0-4389-bdb9-e43e2edc12c2"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{fecha_fin}]]></textFieldExpression>
+				</textField>
+			</frame>
+		</band>
 	</detail>
 	<columnFooter>
-		<band height="50" splitType="Stretch"/>
+		<band height="52" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="47" splitType="Stretch"/>
