--- a/src/BD/AlquilerInterfaz/CRUD_Actividades.form
+++ b/src/BD/AlquilerInterfaz/CRUD_Actividades.form
@@ -203,7 +203,7 @@
         <Component class="javax.swing.JButton" name="btnGuardar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/sav.png"/>
+              <Image iconType="3" name="/imagenes/crear.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="GUARDAR"/>
           </Properties>
