--- a/src/BD/AlquilerInterfaz/V_Reporte.form
+++ b/src/BD/AlquilerInterfaz/V_Reporte.form
@@ -57,7 +57,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Reporte Genereal"/>
+        <Property name="text" type="java.lang.String" value="Reporte General"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
